[package]
name = "wired"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.207", features = ["derive"] }
toml = "0.8.19"
ipnet = "2.7.0"
qrcode = "0.14.1"
image = "0.25.2"
clap = { version = "4.5.15", features = ["derive"] }
[profile.release]
opt-level = 3
