[package]
name = "wired"
version = "2.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
toml = "=0.8.23"
ipnet = "=2.12.0"
qrcode = "=0.14.1"
image = "=0.25.10"
clap = { version = "=4.6.0", features = ["derive"] }
[profile.release]
opt-level = 3
